--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
   "configurations": [
     {
       "type": "java",
+      "name": "Launch Main3",
+      "request": "launch",
+      "mainClass": "Main3",
+      "projectName": "Java_21ec79ca"
+    },
+    {
+      "type": "java",
       "name": "Launch Main2",
       "request": "launch",
       "mainClass": "Main2",
